Start porting to kotlin
- port all plugins to kt
-- code is more robust & simpler
- make screen rotating action a plugin
- port most services to kt
-- code is more robust & simpler
- port several Util classes to kt
- add useful kt extension functions (Properties, util.graphics.css, etc)
- make DB a service
- improve plugin handling
-- every plugin has resource dir and user data dir
- improve Action registering
-- it is possible to register Actions by passing all kinds of objects at once, like Stream, Optional, Action itself, etc...
- make all Environment actions asynchronous
- make Functor.F functions implement kotlin function types
- support Parser serializing/deserializing java/kotlin Singleton classes
- use latest XStream version
- move App.Actions & App.Build to standalone respective AppActions & AppBuilders classes
- minor improvements
-- remove Fut#run method
-- make ClassMap generic
-- implement Disposer, a multi-subscribtion
-- improve logging & javadoc
-- fix BitRate.UNKNOWN deserialization
-- fix some ObjectFields not showing up as columns in tables